k8s/deployment-spa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: declaration-spa-deployment
  labels:
    app: declaration-spa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: declaration-spa
  template:
    metadata:
      labels:
        app: declaration-spa
    spec:
      containers:
      - name: declaration-spa
        image: gcr.io/declarationserver-32231/declaration-spa
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
        - containerPort: 443
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
