k8s/service-spa.yaml
apiVersion: v1
kind: Service
metadata:
  name: spa-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates a NEG after an Ingress is created
spec:
  type: NodePort
  selector:
    app: declaration-spa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
