k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: declaration-ingress
spec:
  tls:
  - secretName: declaration-tls
  rules:
  - http:
      paths:
      - path: /decl/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: declaration-service
            port:
              number: 80
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: spa-service
            port:
              number: 80
